documentation, cleanup, tooling, and demoscene
- documentation: various accuracy and readability fixes
- documentation: documented additional protocol commands
- cleanup: move reference layouts out of package dir
- cleanup: improved comments, consistency, readability
- cleanup: write debug logs nearer to USB rx/tx
- cleanup: more accurate fake behavior in bulkRead()
- cleanup: populate package scripts automatically
- cleanup: ensure autogenerated bins are executable
- cleanup: detect USB connection loss
- tooling: new IPython based ambit_console for testing
- tooling: new bin to enter Palette bootloader
- tooling: automated reference asset extraction from pcap
- tooling: script to display assets recursively
- tooling: experimental zipapp build rules
- demoscene: improved usability with minimal layouts
- demoscene: better threading consistency

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,9 @@
 [mypy-numpy.*]
 ignore_missing_imports = true
 
+[mypy-IPython.*]
+ignore_missing_imports = true
+
 [mypy-pygame.*]
 ignore_missing_imports = true
 
