--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,15 @@ jobs:
 
     - name: Clone repository
       uses: actions/checkout@v2
-      
+
+    - name: Enable deb-src repositories
+      run: "sed 's|^deb |deb-src |g' /etc/apt/sources.list | sudo tee -a /etc/apt/sources.list"
+
     - name: Install build dependencies
       run: sudo apt build-dep -y python3-pygame python3-pyusb
-      
+
     - name: Install dependencies
       run: make deps
-      
+
     - name: Run tests
       run: make test
