--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Enable deb-src repositories
-      run: "sed 's|^deb |deb-src |g' /etc/apt/sources.list | sudo tee -a /etc/apt/sources.list"
+      run: "sudo sed -i 's|# deb-src |deb-src |g' /etc/apt/sources.list"
 
     - name: Install build dependencies
       run: sudo apt build-dep -y python3-pygame python3-pyusb
