--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       run: "sudo sed -i 's|# deb-src |deb-src |g' /etc/apt/sources.list"
 
     - name: Install build dependencies
-      run: sudo apt update && sudo apt build-dep -y python3-pygame python3-usb
+      run: sudo apt update && sudo apt build-dep -y python3-pygame python3-usb python3-numpy
 
     - name: Install dependencies
       run: make deps
