--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,65 @@
 appdirs==1.4.4
-attrs==19.3.0
-click==7.1.2
-coverage==5.1
-mtprof==0.0.3
-mypy==0.770
+appnope==0.1.2; sys_platform == "darwin" and python_version >= "3.7"
+astroid==2.9.3; python_full_version >= "3.6.2"
+attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+backcall==0.2.0; python_version >= "3.7"
+bleach==4.1.0; python_version >= "3.6"
+certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+cffi==1.15.0; sys_platform == "linux" and python_version >= "3.7"
+charset-normalizer==2.0.10; python_full_version >= "3.6.0" and python_version >= "3.6"
+click==8.0.3; python_version >= "3.6"
+colorama==0.4.4; platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.6.2" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and (python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and python_version >= "3.6" and platform_system == "Windows")
+coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
+cryptography==36.0.1; sys_platform == "linux" and python_version >= "3.7"
+decorator==5.1.1; python_version >= "3.7"
+docutils==0.18.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+importlib-metadata==4.10.1; python_version < "3.8" and python_version >= "3.7"
+intelhex==2.3.0
+ipython==7.31.1; python_version >= "3.7"
+isort==5.10.1; python_full_version >= "3.6.2" and python_version < "4.0"
+jedi==0.18.1; python_version >= "3.7"
+jeepney==0.7.1; sys_platform == "linux" and python_version >= "3.7"
+keyring==23.5.0; python_version >= "3.7"
+lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
+matplotlib-inline==0.1.3; python_version >= "3.7"
+mccabe==0.6.1; python_full_version >= "3.6.2"
+mtprof==0.0.3; python_version >= "3"
 mypy-extensions==0.4.3
-pathspec==0.8.0
-pycodestyle==2.6.0
-regex==2020.5.14
-snakeviz==2.1.0
-toml==0.10.1
-tornado==6.0.4
-typed-ast==1.4.1
-typing-extensions==3.7.4.2
-pylint==2.5.2
-twine==3.1.1
-IPython==7.15.0
-IntelHex==2.2.1
+mypy==0.910; python_version >= "3.5"
+packaging==21.3; python_version >= "3.6"
+parso==0.8.3; python_version >= "3.7"
+pathspec==0.9.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.7"
+pickleshare==0.7.5; python_version >= "3.7"
+pkginfo==1.8.2; python_version >= "3.6"
+platformdirs==2.4.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+prompt-toolkit==3.0.24; python_full_version >= "3.6.2" and python_version >= "3.7"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.7"
+pycodestyle==2.8.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "linux" or sys_platform == "linux" and python_version >= "3.7" and python_full_version >= "3.4.0"
+pygments==2.11.2; python_version >= "3.7"
+pylint==2.12.2; python_full_version >= "3.6.2"
+pyparsing==3.0.7; python_version >= "3.6"
+pyusb==1.2.1; python_full_version >= "3.6.0"
+pywin32-ctypes==0.2.0; sys_platform == "win32" and python_version >= "3.7"
+readme-renderer==32.0; python_version >= "3.6"
+regex==2021.11.10
+requests-toolbelt==0.9.1; python_version >= "3.6"
+requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+rfc3986==2.0.0; python_version >= "3.7"
+secretstorage==3.3.1; sys_platform == "linux" and python_version >= "3.7"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+snakeviz==2.1.1
+toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+tornado==6.1; python_version >= "3.5"
+tqdm==4.62.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+traitlets==5.1.1; python_version >= "3.7"
+twine==3.7.1; python_version >= "3.6"
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
+urllib3==1.26.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
+webencodings==0.5.1; python_version >= "3.6"
+wrapt==1.13.3; python_full_version >= "3.6.2"
+zipp==3.7.0; python_version < "3.8" and python_version >= "3.7"
